Part-3-Network-Policy/3rd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client-blocked
  labels:
   role: other
spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args: ["sleep", "36000"]
